add bot voucher
